# pyt-intro-2025

./: .env  .gitignore  CLAUDE.md  DOKUMENTATION_ZUSAMMENFASSUNG.md  Makefile  README.md  TEST_SUMMARY.md  apply_type_hints.py  check_code.sh  commit_changes.py  fix_test_type_hints.py  format_code.sh  format_code_unsafe.sh  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.sh  simple_commit.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
docs/: RUFF_REMAINING_ISSUES.md  RUFF_USAGE.md
docs/plans/: 2026-02-28-projekt-reorganisation-design.md  2026-02-28-projekt-reorganisation.md  2026-03-06-modul6-oop-design.md
docs/setup/: extensions.adoc  vscode-setup.adoc
modul-1-einstieg/: README.md
modul-1-einstieg/00-vorbereitung/: README.md  codespaces-anleitung.md  erste-schritte.md  installationsanleitung.md  leseauftrag.md  quiz.md
modul-1-einstieg/01-praxis/: README.md  lektion-1-was-ist-programmieren.md  lektion-2-python-shell.md  lektion-3-vscode.md  lektion-4-variablen-zahlen.md
modul-1-einstieg/02-uebungen/: README.md  uebung-1-hello-world.md  uebung-2-taschenrechner.md  uebung-3-altersrechner.md  uebung-4-temperatur.md
modul-1-einstieg/03-nachbearbeitung/: README.md  aufgabe-1-waehrungsrechner.md  aufgabe-2-bmi-rechner.md  aufgabe-3-berechnungen.md  reflexion.md
modul-1-einstieg/04-materialien/: README.md  cheatsheet-datentypen.md  haeufige-fehler.md  handout-python-basics.md  vscode-shortcuts.md
modul-1-einstieg/05-beispiele/: README.md  altersrechner.py  berechnungen.py  bmi_rechner.py  datentypen.py  hello_world.py  operatoren.py  taschenrechner.py  temperatur.py  variablen.py  waehrungsrechner.py
modul-2-datentypen/: README.md
modul-2-datentypen/00-vorbereitung/: README.md  erste-experimente.md  leseauftrag.md  quiz.md
modul-2-datentypen/01-praxis/: README.md  lektion-1-strings.md  lektion-2-booleans.md  lektion-3-typkonvertierung.md  lektion-4-interaktive-programme.md  lektion-5-vertiefung.md
modul-2-datentypen/02-uebungen/: README.md  uebung-1-textformatierung.md  uebung-2-vergleiche.md  uebung-3-input.md  uebung-4-rechner.md  uebung-5-string-methoden.md  uebung-6-formatierung.md  uebung-7-validierung.md  uebung-8-textanalyse.md
modul-2-datentypen/03-nachbearbeitung/: README.md  aufgabe-1-textanalyse.md  aufgabe-2-validator.md  aufgabe-3-quiz.md  reflexion.md
modul-2-datentypen/04-materialien/: README.md  cheatsheet-formatierung.md  cheatsheet-strings.md  haeufige-fehler.md  handout-datentypen.md
modul-2-datentypen/05-beispiele/: README.md  email_validator.py  formatierung.py  input_output.py  passwort_validator.py  strings.py  tabelle.py  (+3 more)
modul-3-kontrollstrukturen/: README.md
modul-4-funktionen-datenstrukturen/: README.md
modul-5-dateien-module/: README.md
modul-6-ki-programmieren/: README.md
tests/: README.md  __init__.py  conftest.py
(+211 files in other folders)
